added some library docs